--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <link rel="stylesheet" href="css/variables.css">
   <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/components.css">
+  <link rel="stylesheet" href="css/components.css?v=20260210a">
   <link rel="stylesheet" href="css/sections.css">
   <link rel="stylesheet" href="css/responsive.css">
 </head>
@@ -487,6 +487,6 @@
   <script src="js/i18n.js"></script>
   <script src="js/theme.js"></script>
   <script src="js/animations.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app.js?v=20260210a"></script>
 </body>
 </html>
