--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700;800&family=Changa:wght@500;700;800&family=Sora:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/variables.css">
-  <link rel="stylesheet" href="css/base.css">
-  <link rel="stylesheet" href="css/components.css?v=20260210a">
-  <link rel="stylesheet" href="css/sections.css">
-  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/variables.css?v=20260210b">
+  <link rel="stylesheet" href="css/base.css?v=20260210b">
+  <link rel="stylesheet" href="css/components.css?v=20260210b">
+  <link rel="stylesheet" href="css/sections.css?v=20260210b">
+  <link rel="stylesheet" href="css/responsive.css?v=20260210b">
 </head>
 <body>
   <a class="skip-link" href="#main-content" data-i18n="skip_to_content">Skip to content</a>
@@ -78,6 +78,7 @@
       </button>
 
       <div class="nav-menu" id="nav-menu">
+        <a href="#showcase" data-i18n="nav_experience">Experience</a>
         <a href="#features" data-i18n="nav_features">Features</a>
         <a href="#pathways" data-i18n="nav_pathways">Pathways</a>
         <a href="#safety" data-i18n="nav_safety">Safety</a>
@@ -111,7 +112,7 @@
 
           <div class="hero-cta">
             <a href="#download" class="btn btn--primary" data-i18n="hero_cta_primary">Download the app</a>
-            <a href="#features" class="btn btn--ghost" data-i18n="hero_cta_secondary">Explore platform</a>
+            <a href="#showcase" class="btn btn--ghost" data-i18n="hero_cta_secondary">Explore platform</a>
           </div>
 
           <div class="store-row">
@@ -188,6 +189,157 @@
           <h2 data-count="24" data-suffix="/7">0</h2>
           <p data-i18n="proof_support">Technical support readiness</p>
         </article>
+      </div>
+    </section>
+
+    <section class="section section--alt app-experience" id="showcase">
+      <div class="container">
+        <div class="section-head reveal">
+          <p class="eyebrow" data-i18n="showcase_eyebrow">Real app experience</p>
+          <h2 data-i18n="showcase_title">Inside the actual product families use every day</h2>
+          <p data-i18n="showcase_subtitle">Explore authentic screenshots from the live application across learning, coding, safety, and progress journeys.</p>
+        </div>
+
+        <div class="showcase-shell reveal reveal-delay-1">
+          <div class="showcase-tabs" role="tablist" data-showcase-tabs data-i18n-aria="showcase_tabs_aria">
+            <button class="showcase-tab active" type="button" role="tab" id="showcase-tab-learning" aria-controls="showcase-panel-learning" aria-selected="true" tabindex="0" data-showcase-tab="learning" data-i18n="showcase_tab_learning">Learning flow</button>
+            <button class="showcase-tab" type="button" role="tab" id="showcase-tab-coding" aria-controls="showcase-panel-coding" aria-selected="false" tabindex="-1" data-showcase-tab="coding" data-i18n="showcase_tab_coding">Coding labs</button>
+            <button class="showcase-tab" type="button" role="tab" id="showcase-tab-safety" aria-controls="showcase-panel-safety" aria-selected="false" tabindex="-1" data-showcase-tab="safety" data-i18n="showcase_tab_safety">Safety and onboarding</button>
+            <button class="showcase-tab" type="button" role="tab" id="showcase-tab-progress" aria-controls="showcase-panel-progress" aria-selected="false" tabindex="-1" data-showcase-tab="progress" data-i18n="showcase_tab_progress">Progress and profile</button>
+          </div>
+
+          <article class="showcase-panel active" id="showcase-panel-learning" role="tabpanel" aria-labelledby="showcase-tab-learning" data-showcase-panel="learning">
+            <div class="showcase-hero">
+              <figure class="phone-shot phone-shot--hero">
+                <img src="assets/images/home.jpeg" alt="Home dashboard with key learning widgets." data-i18n-alt="shot_home_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_home_caption">Home dashboard with key learning widgets.</figcaption>
+              </figure>
+              <div class="showcase-summary">
+                <h3 data-i18n="showcase_learning_title">Daily learning flow built for consistency</h3>
+                <p data-i18n="showcase_learning_desc">The learner journey is designed for momentum, from lesson discovery to class participation and guided review.</p>
+                <ul class="showcase-points">
+                  <li data-i18n="showcase_learning_point_1">Clear next-step recommendations for every learner.</li>
+                  <li data-i18n="showcase_learning_point_2">Quick access to live classrooms and structured modules.</li>
+                  <li data-i18n="showcase_learning_point_3">Readable interface for both students and parents.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="showcase-strip">
+              <figure class="shot-card">
+                <img src="assets/images/home-2.jpeg" alt="Secondary home experience with personalized modules." data-i18n-alt="shot_home_2_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_home_2_caption">Secondary home experience with personalized modules.</figcaption>
+              </figure>
+              <figure class="shot-card">
+                <img src="assets/images/about-screen.jpeg" alt="About screen highlighting academy value and mission." data-i18n-alt="shot_about_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_about_caption">About screen highlighting academy value and mission.</figcaption>
+              </figure>
+              <figure class="shot-card">
+                <img src="assets/images/live-classrooms.jpeg" alt="Live classroom listing for active sessions." data-i18n-alt="shot_live_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_live_caption">Live classroom listing for active sessions.</figcaption>
+              </figure>
+            </div>
+          </article>
+
+          <article class="showcase-panel" id="showcase-panel-coding" role="tabpanel" aria-labelledby="showcase-tab-coding" data-showcase-panel="coding" hidden>
+            <div class="showcase-hero">
+              <figure class="phone-shot phone-shot--hero">
+                <img src="assets/images/python-code-editor-with-output.jpeg" alt="Python editor with code execution output." data-i18n-alt="shot_python_output_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_python_output_caption">Python editor with code execution output.</figcaption>
+              </figure>
+              <div class="showcase-summary">
+                <h3 data-i18n="showcase_coding_title">Hands-on coding labs with instant feedback</h3>
+                <p data-i18n="showcase_coding_desc">Students write real code, run it directly, and iterate quickly with project-based guidance.</p>
+                <ul class="showcase-points">
+                  <li data-i18n="showcase_coding_point_1">Integrated editors for Python and web development.</li>
+                  <li data-i18n="showcase_coding_point_2">Output panels to verify logic and debug faster.</li>
+                  <li data-i18n="showcase_coding_point_3">Built-in progression from fundamentals to practical projects.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="showcase-strip">
+              <figure class="shot-card">
+                <img src="assets/images/code-editor.jpeg" alt="Code editor interface for lesson-based exercises." data-i18n-alt="shot_code_editor_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_code_editor_caption">Code editor interface for lesson-based exercises.</figcaption>
+              </figure>
+              <figure class="shot-card">
+                <img src="assets/images/web-code-editor.jpeg" alt="Web code editor workspace for HTML and CSS practice." data-i18n-alt="shot_web_editor_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_web_editor_caption">Web code editor workspace for HTML and CSS practice.</figcaption>
+              </figure>
+              <figure class="shot-card">
+                <img src="assets/images/web-editor-with-output.jpeg" alt="Web editor with rendered output preview." data-i18n-alt="shot_web_output_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_web_output_caption">Web editor with rendered output preview.</figcaption>
+              </figure>
+            </div>
+          </article>
+
+          <article class="showcase-panel" id="showcase-panel-safety" role="tabpanel" aria-labelledby="showcase-tab-safety" data-showcase-panel="safety" hidden>
+            <div class="showcase-hero">
+              <figure class="phone-shot phone-shot--hero">
+                <img src="assets/images/signup-screen-under-18.jpeg" alt="Under-18 signup flow with guardian context." data-i18n-alt="shot_signup_under18_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_signup_under18_caption">Under-18 signup flow with guardian context.</figcaption>
+              </figure>
+              <div class="showcase-summary">
+                <h3 data-i18n="showcase_safety_title">Onboarding and controls designed for child safety</h3>
+                <p data-i18n="showcase_safety_desc">Identity, account setup, and settings flows align with parent visibility and safer usage standards.</p>
+                <ul class="showcase-points">
+                  <li data-i18n="showcase_safety_point_1">Structured onboarding for both adults and minors.</li>
+                  <li data-i18n="showcase_safety_point_2">Professional settings center for responsible account control.</li>
+                  <li data-i18n="showcase_safety_point_3">Consistent UX that reduces mistakes and improves trust.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="showcase-strip">
+              <figure class="shot-card">
+                <img src="assets/images/login-screen.jpeg" alt="Secure login interface." data-i18n-alt="shot_login_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_login_caption">Secure login interface.</figcaption>
+              </figure>
+              <figure class="shot-card">
+                <img src="assets/images/signup-screen.jpeg" alt="Standard signup workflow for account creation." data-i18n-alt="shot_signup_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_signup_caption">Standard signup workflow for account creation.</figcaption>
+              </figure>
+              <figure class="shot-card">
+                <img src="assets/images/professional-settings.jpeg" alt="Settings panel with detailed account controls." data-i18n-alt="shot_settings_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_settings_caption">Settings panel with detailed account controls.</figcaption>
+              </figure>
+            </div>
+          </article>
+
+          <article class="showcase-panel" id="showcase-panel-progress" role="tabpanel" aria-labelledby="showcase-tab-progress" data-showcase-panel="progress" hidden>
+            <div class="showcase-hero">
+              <figure class="phone-shot phone-shot--hero">
+                <img src="assets/images/progress-dashboard.jpeg" alt="Progress dashboard with learning analytics." data-i18n-alt="shot_progress_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_progress_caption">Progress dashboard with learning analytics.</figcaption>
+              </figure>
+              <div class="showcase-summary">
+                <h3 data-i18n="showcase_progress_title">Progress insights and personalized learning context</h3>
+                <p data-i18n="showcase_progress_desc">Students and families can track growth, review material, and navigate personalized content from one place.</p>
+                <ul class="showcase-points">
+                  <li data-i18n="showcase_progress_point_1">Performance visibility through dashboard-driven metrics.</li>
+                  <li data-i18n="showcase_progress_point_2">Profile and identity areas tailored for each learner.</li>
+                  <li data-i18n="showcase_progress_point_3">Media players and snippets to reinforce retention.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="showcase-strip">
+              <figure class="shot-card">
+                <img src="assets/images/user-profile.jpeg" alt="User profile and account details screen." data-i18n-alt="shot_profile_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_profile_caption">User profile and account details screen.</figcaption>
+              </figure>
+              <figure class="shot-card">
+                <img src="assets/images/playlist-player.jpeg" alt="Playlist player for lesson playback." data-i18n-alt="shot_playlist_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_playlist_caption">Playlist player for lesson playback.</figcaption>
+              </figure>
+              <figure class="shot-card">
+                <img src="assets/images/snippets-player.jpeg" alt="Snippets player for short learning clips." data-i18n-alt="shot_snippets_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_snippets_caption">Snippets player for short learning clips.</figcaption>
+              </figure>
+            </div>
+          </article>
+        </div>
       </div>
     </section>
 
@@ -417,6 +569,7 @@
 
       <div>
         <h3 data-i18n="footer_product">Product</h3>
+        <a href="#showcase" data-i18n="nav_experience">Experience</a>
         <a href="#features" data-i18n="nav_features">Features</a>
         <a href="#pricing" data-i18n="nav_pricing">Pricing</a>
         <a href="#download" data-i18n="nav_get_app">Get the app</a>
@@ -484,9 +637,9 @@
     }
   </script>
 
-  <script src="js/i18n.js"></script>
-  <script src="js/theme.js"></script>
-  <script src="js/animations.js"></script>
-  <script src="js/app.js?v=20260210a"></script>
+  <script src="js/i18n.js?v=20260210b"></script>
+  <script src="js/theme.js?v=20260210b"></script>
+  <script src="js/animations.js?v=20260210b"></script>
+  <script src="js/app.js?v=20260210b"></script>
 </body>
 </html>
