--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
-  <link rel="stylesheet" href="css/components.css?v=20260210i">
+  <link rel="stylesheet" href="css/components.css?v=20260210k">
   <link rel="stylesheet" href="css/sections.css?v=20260210f">
   <link rel="stylesheet" href="css/responsive.css?v=20260210f">
 </head>
@@ -105,8 +105,8 @@
         </button>
         <a class="btn btn--primary btn--sm nav-download store-btn" href="#download">
           <span class="store-pair" aria-hidden="true">
-            <img class="store-icon store-icon--btn" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="16" height="16">
-            <img class="store-icon store-icon--btn" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="16" height="16">
+            <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="16" height="16">
+            <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="16" height="16">
           </span>
           <span data-i18n="nav_get_app">Get the app</span>
         </a>
@@ -128,8 +128,8 @@
           <div class="hero-cta">
             <a href="#download" class="btn btn--primary store-btn">
               <span class="store-pair" aria-hidden="true">
-                <img class="store-icon store-icon--btn" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="16" height="16">
-                <img class="store-icon store-icon--btn" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="16" height="16">
+                <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="16" height="16">
+                <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="16" height="16">
               </span>
               <span data-i18n="hero_cta_primary">Download the app</span>
             </a>
@@ -139,14 +139,14 @@
           <div class="store-row">
             <a href="https://play.google.com/store/apps/details?id=com.khadhami.academy" target="_blank" rel="noopener noreferrer" class="store-pill" aria-label="Google Play">
               <span class="store-pill__meta-row">
-                <img class="store-icon store-icon--pill" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="17" height="17">
+                <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="17" height="17">
                 <span class="store-pill__meta" data-i18n="store_google_meta">GET IT ON</span>
               </span>
               <span class="store-pill__name">Google Play</span>
             </a>
             <a href="https://apps.apple.com/app/khadhami-academy/id6740044498" target="_blank" rel="noopener noreferrer" class="store-pill" aria-label="App Store">
               <span class="store-pill__meta-row">
-                <img class="store-icon store-icon--pill" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="17" height="17">
+                <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="17" height="17">
                 <span class="store-pill__meta" data-i18n="store_apple_meta">Download on the</span>
               </span>
               <span class="store-pill__name">App Store</span>
@@ -598,11 +598,11 @@
         <p data-i18n="download_subtitle">Download اكاديمية الخضمي and start a world-class learning journey today.</p>
         <div class="hero-cta">
           <a href="https://play.google.com/store/apps/details?id=com.khadhami.academy" target="_blank" rel="noopener noreferrer" class="btn btn--primary store-btn">
-            <img class="store-icon store-icon--btn" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="17" height="17">
+            <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="17" height="17">
             <span data-i18n="download_google">Get it on Google Play</span>
           </a>
           <a href="https://apps.apple.com/app/khadhami-academy/id6740044498" target="_blank" rel="noopener noreferrer" class="btn btn--ghost store-btn">
-            <img class="store-icon store-icon--btn" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="17" height="17">
+            <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="17" height="17">
             <span data-i18n="download_apple">Download on App Store</span>
           </a>
         </div>
@@ -742,4 +742,5 @@
   <script src="js/app.js?v=20260210f"></script>
 </body>
 </html>
+
 
