--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
-  <link rel="stylesheet" href="css/components.css?v=20260210k">
+  <link rel="stylesheet" href="css/components.css?v=20260210l">
   <link rel="stylesheet" href="css/sections.css?v=20260210f">
   <link rel="stylesheet" href="css/responsive.css?v=20260210f">
 </head>
@@ -550,7 +550,7 @@
             <span class="badge" data-i18n="plan_pro_badge">Most popular</span>
             <h3 data-i18n="plan_pro_title">Pro</h3>
             <p class="price"><span data-i18n="plan_pro_price_main">$19.99</span> <span data-i18n="plan_pro_period">per month</span></p>
-            <p class="price-alt" data-i18n-html="plan_pro_price_sar">Approx. <span class="sar-symbol" aria-hidden="true">&#x20C1;</span> 74.96 SAR</p>
+            <p class="price-alt" data-i18n-html="plan_pro_price_sar">Approx. <span class="sar-symbol" aria-hidden="true"></span> 74.96 SAR</p>
             <ul>
               <li data-i18n="plan_pro_1">Unlimited premium content</li>
               <li data-i18n="plan_pro_2">Full code and AI labs</li>
@@ -736,11 +736,9 @@
     }
   </script>
 
-  <script src="js/i18n.js?v=20260210g"></script>
+  <script src="js/i18n.js?v=20260210h"></script>
   <script src="js/theme.js?v=20260210c"></script>
   <script src="js/animations.js?v=20260210c"></script>
   <script src="js/app.js?v=20260210f"></script>
 </body>
 </html>
-
-
