--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
-  <link rel="stylesheet" href="css/components.css?v=20260210l">
+  <link rel="stylesheet" href="css/components.css?v=20260210m">
   <link rel="stylesheet" href="css/sections.css?v=20260210f">
   <link rel="stylesheet" href="css/responsive.css?v=20260210f">
 </head>
