--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
-  <link rel="stylesheet" href="css/components.css?v=20260210n">
-  <link rel="stylesheet" href="css/sections.css?v=20260210h">
+  <link rel="stylesheet" href="css/components.css?v=20260210p">
+  <link rel="stylesheet" href="css/sections.css?v=20260210j">
   <link rel="stylesheet" href="css/responsive.css?v=20260210h">
 </head>
 <body>
