--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         </button>
         <a class="btn btn--primary btn--sm nav-download store-btn" href="#download">
           <span class="store-pair" aria-hidden="true">
-            <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="16" height="16">
-            <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="16" height="16">
+            <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp?v=20260211a" alt="" aria-hidden="true" width="16" height="16">
+            <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp?v=20260211a" alt="" aria-hidden="true" width="16" height="16">
           </span>
           <span data-i18n="nav_get_app">Get the app</span>
         </a>
@@ -130,8 +130,8 @@
           <div class="hero-cta">
             <a href="#download" class="btn btn--primary store-btn">
               <span class="store-pair" aria-hidden="true">
-                <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="16" height="16">
-                <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="16" height="16">
+                <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp?v=20260211a" alt="" aria-hidden="true" width="16" height="16">
+                <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp?v=20260211a" alt="" aria-hidden="true" width="16" height="16">
               </span>
               <span data-i18n="nav_get_app">Get the app</span>
             </a>
@@ -522,11 +522,11 @@
         <p data-i18n="download_subtitle">Download اكاديمية الخضمي and start a world-class learning journey today.</p>
         <div class="hero-cta">
           <a href="https://play.google.com/store/apps/details?id=com.khadhami.academy" target="_blank" rel="noopener noreferrer" class="btn btn--primary store-btn">
-            <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp" alt="" aria-hidden="true" width="17" height="17">
+            <img class="store-icon store-icon--brand" src="assets/images/store-googleplay.webp?v=20260211a" alt="" aria-hidden="true" width="17" height="17">
             <span data-i18n="download_google">Get it on Google Play</span>
           </a>
           <a href="https://apps.apple.com/app/khadhami-academy/id6740044498" target="_blank" rel="noopener noreferrer" class="btn btn--ghost store-btn">
-            <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp" alt="" aria-hidden="true" width="17" height="17">
+            <img class="store-icon store-icon--brand" src="assets/images/store-appstore.webp?v=20260211a" alt="" aria-hidden="true" width="17" height="17">
             <span data-i18n="download_apple">Download on App Store</span>
           </a>
         </div>
