--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
   <link rel="stylesheet" href="css/components.css?v=20260210p">
-  <link rel="stylesheet" href="css/sections.css?v=20260210j">
-  <link rel="stylesheet" href="css/responsive.css?v=20260210h">
+  <link rel="stylesheet" href="css/sections.css?v=20260210k">
+  <link rel="stylesheet" href="css/responsive.css?v=20260210i">
 </head>
 <body>
   <a class="skip-link" href="#main-content" data-i18n="skip_to_content">Skip to content</a>
@@ -374,7 +374,7 @@
               <li data-i18n="plan_free_2">Selected live sessions</li>
               <li data-i18n="plan_free_3">Basic progress tracking</li>
             </ul>
-            <a class="btn btn--ghost" href="#download" data-i18n="nav_get_app">Get the app</a>
+            <a class="btn btn--primary" href="#download" data-i18n="nav_get_app">Get the app</a>
           </article>
 
           <article class="pricing-card pricing-card--featured reveal reveal-delay-2">
@@ -441,32 +441,35 @@
             <button type="button" class="icon-btn showcase-mini__arrow" data-showcase-next data-i18n-aria="showcase_next" aria-label="Next screenshot">&#8250;</button>
           </div>
 
-          <div class="showcase-mini__track" data-showcase-track>
-            <figure class="mini-shot">
-              <img src="assets/images/home.jpeg" alt="Home dashboard with key learning widgets." data-i18n-alt="shot_home_alt" loading="lazy" decoding="async">
-              <figcaption data-i18n="shot_home_caption">Home dashboard with key learning widgets.</figcaption>
-            </figure>
-            <figure class="mini-shot">
-              <img src="assets/images/python-code-editor-with-output.jpeg" alt="Python editor with code execution output." data-i18n-alt="shot_python_output_alt" loading="lazy" decoding="async">
-              <figcaption data-i18n="shot_python_output_caption">Python editor with code execution output.</figcaption>
-            </figure>
-            <figure class="mini-shot">
-              <img src="assets/images/signup-screen-under-18.jpeg" alt="Under-18 signup flow with guardian context." data-i18n-alt="shot_signup_under18_alt" loading="lazy" decoding="async">
-              <figcaption data-i18n="shot_signup_under18_caption">Under-18 signup flow with guardian context.</figcaption>
-            </figure>
-            <figure class="mini-shot">
-              <img src="assets/images/progress-dashboard.jpeg" alt="Progress dashboard with learning analytics." data-i18n-alt="shot_progress_alt" loading="lazy" decoding="async">
-              <figcaption data-i18n="shot_progress_caption">Progress dashboard with learning analytics.</figcaption>
-            </figure>
-            <figure class="mini-shot">
-              <img src="assets/images/web-editor-with-output.jpeg" alt="Web editor with rendered output preview." data-i18n-alt="shot_web_output_alt" loading="lazy" decoding="async">
-              <figcaption data-i18n="shot_web_output_caption">Web editor with rendered output preview.</figcaption>
-            </figure>
-            <figure class="mini-shot">
-              <img src="assets/images/professional-settings.jpeg" alt="Settings panel with detailed account controls." data-i18n-alt="shot_settings_alt" loading="lazy" decoding="async">
-              <figcaption data-i18n="shot_settings_caption">Settings panel with detailed account controls.</figcaption>
-            </figure>
+          <div class="showcase-mini__viewport" data-showcase-viewport>
+            <div class="showcase-mini__track" data-showcase-track>
+              <figure class="mini-shot">
+                <img src="assets/images/home.jpeg" alt="Home dashboard with key learning widgets." data-i18n-alt="shot_home_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_home_caption">Home dashboard with key learning widgets.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/python-code-editor-with-output.jpeg" alt="Python editor with code execution output." data-i18n-alt="shot_python_output_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_python_output_caption">Python editor with code execution output.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/signup-screen-under-18.jpeg" alt="Under-18 signup flow with guardian context." data-i18n-alt="shot_signup_under18_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_signup_under18_caption">Under-18 signup flow with guardian context.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/progress-dashboard.jpeg" alt="Progress dashboard with learning analytics." data-i18n-alt="shot_progress_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_progress_caption">Progress dashboard with learning analytics.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/web-editor-with-output.jpeg" alt="Web editor with rendered output preview." data-i18n-alt="shot_web_output_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_web_output_caption">Web editor with rendered output preview.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/professional-settings.jpeg" alt="Settings panel with detailed account controls." data-i18n-alt="shot_settings_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_settings_caption">Settings panel with detailed account controls.</figcaption>
+              </figure>
+            </div>
           </div>
+          <div class="showcase-mini__dots" data-showcase-dots aria-hidden="true"></div>
         </div>
       </div>
     </section>
@@ -713,6 +716,6 @@
   <script src="js/i18n.js?v=20260210j"></script>
   <script src="js/theme.js?v=20260210c"></script>
   <script src="js/animations.js?v=20260210c"></script>
-  <script src="js/app.js?v=20260210h"></script>
+  <script src="js/app.js?v=20260210i"></script>
 </body>
 </html>
