--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <link rel="stylesheet" href="css/variables.css?v=20260210c">
   <link rel="stylesheet" href="css/base.css?v=20260210c">
   <link rel="stylesheet" href="css/components.css?v=20260210p">
-  <link rel="stylesheet" href="css/sections.css?v=20260210k">
+  <link rel="stylesheet" href="css/sections.css?v=20260210l">
   <link rel="stylesheet" href="css/responsive.css?v=20260210i">
 </head>
 <body>
@@ -448,24 +448,64 @@
                 <figcaption data-i18n="shot_home_caption">Home dashboard with key learning widgets.</figcaption>
               </figure>
               <figure class="mini-shot">
+                <img src="assets/images/home-2.jpeg" alt="Secondary home experience with personalized modules." data-i18n-alt="shot_home_2_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_home_2_caption">Secondary home experience with personalized modules.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/about-screen.jpeg" alt="About screen highlighting academy value and mission." data-i18n-alt="shot_about_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_about_caption">About screen highlighting academy value and mission.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/live-classrooms.jpeg" alt="Live classroom listing for active sessions." data-i18n-alt="shot_live_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_live_caption">Live classroom listing for active sessions.</figcaption>
+              </figure>
+              <figure class="mini-shot">
                 <img src="assets/images/python-code-editor-with-output.jpeg" alt="Python editor with code execution output." data-i18n-alt="shot_python_output_alt" loading="lazy" decoding="async">
                 <figcaption data-i18n="shot_python_output_caption">Python editor with code execution output.</figcaption>
               </figure>
               <figure class="mini-shot">
-                <img src="assets/images/signup-screen-under-18.jpeg" alt="Under-18 signup flow with guardian context." data-i18n-alt="shot_signup_under18_alt" loading="lazy" decoding="async">
-                <figcaption data-i18n="shot_signup_under18_caption">Under-18 signup flow with guardian context.</figcaption>
+                <img src="assets/images/code-editor.jpeg" alt="Code editor interface for lesson-based exercises." data-i18n-alt="shot_code_editor_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_code_editor_caption">Code editor interface for lesson-based exercises.</figcaption>
               </figure>
               <figure class="mini-shot">
-                <img src="assets/images/progress-dashboard.jpeg" alt="Progress dashboard with learning analytics." data-i18n-alt="shot_progress_alt" loading="lazy" decoding="async">
-                <figcaption data-i18n="shot_progress_caption">Progress dashboard with learning analytics.</figcaption>
+                <img src="assets/images/web-code-editor.jpeg" alt="Web code editor workspace for HTML and CSS practice." data-i18n-alt="shot_web_editor_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_web_editor_caption">Web code editor workspace for HTML and CSS practice.</figcaption>
               </figure>
               <figure class="mini-shot">
                 <img src="assets/images/web-editor-with-output.jpeg" alt="Web editor with rendered output preview." data-i18n-alt="shot_web_output_alt" loading="lazy" decoding="async">
                 <figcaption data-i18n="shot_web_output_caption">Web editor with rendered output preview.</figcaption>
               </figure>
               <figure class="mini-shot">
+                <img src="assets/images/signup-screen-under-18.jpeg" alt="Under-18 signup flow with guardian context." data-i18n-alt="shot_signup_under18_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_signup_under18_caption">Under-18 signup flow with guardian context.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/signup-screen.jpeg" alt="Standard signup workflow for account creation." data-i18n-alt="shot_signup_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_signup_caption">Standard signup workflow for account creation.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/login-screen.jpeg" alt="Secure login interface." data-i18n-alt="shot_login_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_login_caption">Secure login interface.</figcaption>
+              </figure>
+              <figure class="mini-shot">
                 <img src="assets/images/professional-settings.jpeg" alt="Settings panel with detailed account controls." data-i18n-alt="shot_settings_alt" loading="lazy" decoding="async">
                 <figcaption data-i18n="shot_settings_caption">Settings panel with detailed account controls.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/progress-dashboard.jpeg" alt="Progress dashboard with learning analytics." data-i18n-alt="shot_progress_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_progress_caption">Progress dashboard with learning analytics.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/user-profile.jpeg" alt="User profile and account details screen." data-i18n-alt="shot_profile_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_profile_caption">User profile and account details screen.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/playlist-player.jpeg" alt="Playlist player for lesson playback." data-i18n-alt="shot_playlist_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_playlist_caption">Playlist player for lesson playback.</figcaption>
+              </figure>
+              <figure class="mini-shot">
+                <img src="assets/images/snippets-player.jpeg" alt="Snippets player for short learning clips." data-i18n-alt="shot_snippets_alt" loading="lazy" decoding="async">
+                <figcaption data-i18n="shot_snippets_caption">Snippets player for short learning clips.</figcaption>
               </figure>
             </div>
           </div>
